name:                play-sound
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rcook/play-sound#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Cook
maintainer:          rcook@rcook.org
copyright:           2018 Richard Cook
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable play-sound
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
